--- a/crud-frontend/index.html
+++ b/crud-frontend/index.html
@@ -25,7 +25,7 @@
         <script src="controllers/newSearchController.js"></script>
         
         <!-- Css -->
-        <link rel="stylesheet" type="text/css" href="styles/login.css">
+        <link rel="stylesheet" type="text/css" href="styles/styles.css">
         <link rel="stylesheet" type="text/css" href="styles/user-choose-table.css">
         
     </head>
