--- a/crud-frontend/index.html
+++ b/crud-frontend/index.html
@@ -17,7 +17,7 @@
         <!-- Services -->
         <script src="services/userService.js"></script>
         <script src="services/placeService.js"></script>
-        <script src="services/criteriaService.js"></script>
+        <script src="services/ahpService.js"></script>
 
         <!-- Controllers -->
         <script src="controllers/loginController.js"></script>
