Agregado almacenamiento en base de lugares y criterios

--- a/crud-frontend/index.html
+++ b/crud-frontend/index.html
@@ -18,6 +18,7 @@
         <script src="services/userService.js"></script>
         <script src="services/placeService.js"></script>
         <script src="services/ahpService.js"></script>
+        <script src="services/criteriaService.js"></script>
 
         <!-- Controllers -->
         <script src="controllers/loginController.js"></script>
