Acomodado algoritmo para contemplar subcriterios

--- a/crud-frontend/index.html
+++ b/crud-frontend/index.html
@@ -50,13 +50,12 @@
             <div ng-include="'views/airplane-loader.html'" ng-show="loading"></div>
             <ng-view></ng-view>
         </div>
+
+        <!-- <footer id="sticky-footer" class="py-4 palette-dark text-white-50">
+            <div class="container text-center">
+              <small>Copyright &copy; TravelApp</small>
+            </div>
+        </footer> -->
     </body>
-
-
-    <footer id="sticky-footer" class="py-4 palette-dark text-white-50">
-        <div class="container text-center">
-          <small>Copyright &copy; TravelApp</small>
-        </div>
-    </footer>
 
 </html>
