Cambios front + reorganizacion del new-search + validaciones de visibilidad

--- a/crud-frontend/index.html
+++ b/crud-frontend/index.html
@@ -51,11 +51,11 @@
             <ng-view></ng-view>
         </div>
 
-        <!-- <footer id="sticky-footer" class="py-4 palette-dark text-white-50">
+        <footer id="sticky-footer" class="py-4 palette-dark text-white-50 stickyFooter">
             <div class="container text-center">
               <small>Copyright &copy; TravelApp</small>
             </div>
-        </footer> -->
+        </footer>
     </body>
 
 </html>
