--- a/crud-frontend/index.html
+++ b/crud-frontend/index.html
@@ -2,7 +2,7 @@
 <html ng-app="GameApp">
 
     <head>
-        <title>TravelApp</title>
+        <title>Dónde voy?</title>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28//angular-route.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -38,7 +38,7 @@
         <nav class="navbar navbar-dark palette-dark">
             <a class="navbar-brand" href="/">
                 <img src="https://img.pngio.com/travel-png-images-transparent-free-download-pngmartcom-travel-png-free-download-3344_2453.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                TravelApp
+                Dónde voy?
             </a>
         </nav>
     </body>
@@ -53,7 +53,7 @@
 
         <footer id="sticky-footer" class="py-4 palette-dark text-white-50 stickyFooter">
             <div class="container text-center">
-              <small>Copyright &copy; TravelApp</small>
+              <small>Copyright &copy; Dónde voy?</small>
             </div>
         </footer>
     </body>
